Init implementation - Shell, MainPage, MainPageVM

--- a/BrnoParkingIS/App.xaml
+++ b/BrnoParkingIS/App.xaml
@@ -1,7 +1,8 @@
-﻿<Application
+﻿<isuf:ApplicationBase
     x:Class="BrnoParkingIS.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:isuf="using:ISUF.UI.App"
     xmlns:local="using:BrnoParkingIS">
 
-</Application>
+</isuf:ApplicationBase>
