--- a/BrnoParkingIS/Views/MainPage.xaml
+++ b/BrnoParkingIS/Views/MainPage.xaml
@@ -1,12 +1,12 @@
-﻿<Page
-    x:Class="BrnoParkingIS.MainPage"
+﻿<isuf:MainPageBase
+    x:Class="BrnoParkingIS.Views.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:BrnoParkingIS"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    xmlns:isuf="using:ISUF.UI.Views">
 
     <Grid>
         <RelativePanel VerticalAlignment="Center"
@@ -29,4 +29,5 @@
 
         </RelativePanel>
     </Grid>
-</Page>
+
+</isuf:MainPageBase>
