--- a/BrnoParkingIS/Views/ParkingModulePage.xaml
+++ b/BrnoParkingIS/Views/ParkingModulePage.xaml
@@ -1,14 +1,15 @@
-﻿<Page
+﻿<isuf:ModulePageBase
     x:Class="BrnoParkingIS.Views.ParkingModulePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:BrnoParkingIS.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:isuf="using:ISUF.UI.Views"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
         <TextBlock Text="Parking" FontSize="40"/>
     </Grid>
-</Page>
+</isuf:ModulePageBase>
